# Hack-the-Globe-2026

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml
backend/data/: README.md
backend/hack_the_globe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: main.py
backend/src/api/: assets.py  choke_points.py  fires.py  predictions.py
backend/src/core/: config.py  db.py  seed_db.py
backend/src/ingestion/: cffdrs.py  cwfis.py  dummy.py  firms.py  weather.py
backend/src/models/: fire_env.py  rl_agent.py  spread_1h_model.joblib  spread_3h_model.joblib  spread_model.py  train_rl_agent.py
docs/: ARCHITECTURE.md  ml_architecture.md  rl_agent.md  todo.md
frontend/: DESIGN.md  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/server/app/: page_client-reference-manifest.js
frontend/.next/dev/static/chunks/: _8842dd59._.css  _8842dd59._.css.map  _ba6003be._.js  _ba6003be._.js.map  app_globals_css_bad6b30c._.single.css  (+19 more)
frontend/.next/dev/types/: validator.ts
frontend/app/: globals.css  layout.tsx
frontend/app/api/ai-recommendations/: route.ts
frontend/app/map/: page.tsx
frontend/components/map/: wildfire-map.tsx
frontend/components/sidebar/: ai-sidebar.tsx  left-sidebar.tsx  media-sidebar.tsx
frontend/components/ui/: camera-panel.tsx  deployment-bar.tsx  stack-menu.tsx
frontend/data/: canada-geojson.ts  canada-provinces.ts  demo-wildfire.ts  fake-wildfire.ts
frontend/lib/: api.ts  fire-simulator.ts
frontend/stores/: wildfire-store.ts
(+29 files in other folders)
