[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hack-the-globe-backend"
version = "0.1.0"
description = "CanopyOS — Unified Canadian Wildfire Tactical Command Backend"
requires-python = ">=3.12"
dependencies = [
  # API Framework
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  # Data validation & settings
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  # HTTP client for data ingestion
  "httpx>=0.27,<1.0",
  # Geospatial
  "shapely>=2.0,<3.0",
  # --- Phase 3: ML ---
  "xgboost>=2.0,<3.0",
  "scikit-learn>=1.5,<2.0",
  "pandas>=2.2,<3.0",
  # --- Phase 3b: RL Agent ---
  "gymnasium>=0.29,<1.0",
  "stable-baselines3>=2.3,<3.0",
  "boto3>=1.42.73",

]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
